# ESP32-S3-Midi-Sound-Module

./: CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  audio_sd_system.c  audio_sd_system.h  main.c  midi_class_driver_txrx.c  midi_processor.c  midi_processor.h  midi_uart.c  sfz_parser.c  sfz_parser.h
