idf_component_register(
    SRCS 
        "main.c"
        "midi_uart.c"
        "midi_class_driver_txrx.c"
        "led_rgb.c"
        "usb_daemon.c"
        "audio_sd_system.c"
        "midi_processor.c"
    INCLUDE_DIRS 
        "."
    REQUIRES 
        freertos
        driver
        esp_timer
        nvs_flash
        led_strip
        fatfs
        vfs          
    PRIV_REQUIRES 
        usb
)